add(imu correct): correct param

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,8 @@ install(DIRECTORY rviz/
   DESTINATION share/${PROJECT_NAME}/rviz
 )
 
+install(DIRECTORY rviz/
+  DESTINATION share/${PROJECT_NAME}/data
+)
+
 ament_package()
