--- a/config/faster_lio_velodyne.yaml
+++ b/config/faster_lio_velodyne.yaml
@@ -8,8 +8,8 @@
     cube_side_length: 1000.0
     runtime_pos_log_enable: false
     map_file_path: "/home/scl/ros2_ws/src/scl_amr/map/test.pcd"
-    odom_link: "odom"
-    base_link: "base_link"
+    baselinkFrame: "odom"
+    odometryFrame: "base_link"
 
     common:
       lid_topic: "/velodyne_points"
