--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -70,7 +70,7 @@ controller_server:
     controller_frequency: 10.0
     costmap_update_timeout: 0.30
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugins: ["progress_checker"]
@@ -208,13 +208,13 @@ controller_server:
         offset_from_furthest: 20
         use_path_orientations: false
       PathFollowCritic:
-        enabled: false
+        enabled: true
         cost_power: 1
         cost_weight: 5.0
         offset_from_furthest: 5
         threshold_to_consider: 1.4
       PathAngleCritic:
-        enabled: false
+        enabled: true
         cost_power: 1
         cost_weight: 2.0
         offset_from_furthest: 4
@@ -379,8 +379,8 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 2.0]
-    min_velocity: [-0.5, 0.0, -2.0]
+    max_velocity: [0.5, 0.0, 2.0]     # x, y, z
+    min_velocity: [-0.5, 0.0, -2.0]   # x, y, z
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
     odom_topic: "odom"
@@ -414,7 +414,7 @@ collision_monitor:
     observation_sources: ["scan"]
     scan:
       type: "scan"
-      topic: "scan"
+      topic: "scan_hokuyo"
       min_height: 0.15
       max_height: 2.0
       enabled: True
