--- a/config/dlio_setting.yaml
+++ b/config/dlio_setting.yaml
@@ -15,7 +15,7 @@
 
     version: 1.1.1
 
-    adaptive: false # original: true
+    adaptive: true # original: true
 
     pointcloud/deskew: true
     pointcloud/voxelize: true
