--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -297,6 +297,16 @@ planner_server:
       w_euc_cost: 1.0
       w_traversal_cost: 2.0
       w_heuristic_cost: 1.0
+# planner_server:
+#   ros__parameters:
+#     expected_planner_frequency: 20.0
+#     planner_plugins: ["GridBased"]
+#     costmap_update_timeout: 1.0
+#     GridBased:
+#       plugin: "nav2_navfn_planner::NavfnPlanner"
+#       tolerance: 0.5
+#       use_astar: false
+#       allow_unknown: true
 
 smoother_server:
   ros__parameters:
