--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -1,24 +1,24 @@
 amcl:
   ros__parameters:
-    alpha1: 0.05
-    alpha2: 0.05
+    alpha1: 0.1
+    alpha2: 0.1
     alpha3: 0.1
-    alpha4: 0.05
+    alpha4: 0.1
     alpha5: 0.1
     base_frame_id: "base_link"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
-    do_beamskip: false
+    do_beamskip: true
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 2.0
     laser_max_range: 100.0
     laser_min_range: -1.0
-    laser_model_type: "likelihood_field_prob"
-    max_beams: 60
+    laser_model_type: "likelihood_field"
+    max_beams: 90
     max_particles: 2500
-    min_particles: 800
+    min_particles: 1000
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -29,7 +29,7 @@ amcl:
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
-    transform_tolerance: 1.0
+    transform_tolerance: 0.2
     update_min_a: 0.1
     update_min_d: 0.05
     z_hit: 0.5
@@ -92,8 +92,8 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.06   # 0.07
-      yaw_goal_tolerance: 0.08  # 0.08
+      xy_goal_tolerance: 0.08   # 0.07
+      yaw_goal_tolerance: 0.05  # 0.08
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
@@ -102,9 +102,9 @@ controller_server:
       batch_size: 2000
       vx_std: 0.2
       vy_std: 0.0
-      wz_std: 0.6  # 0.15
+      wz_std: 0.6
       vx_max: 0.5   # 0.5 ok
-      vx_min: -0.2  
+      vx_min: -0.3  
       vy_max: 0.0
       wz_max: 3.0   # 2.0?
       wz_min: -3.5
@@ -143,7 +143,7 @@ controller_server:
         enabled: true
         cost_power: 1
         cost_weight: 5.0
-        threshold_to_consider: 0.5    # ori : 0.5, check : 1.0
+        threshold_to_consider: 0.2    # ori : 0.5  
       PreferForwardCritic:
         enabled: true
         cost_power: 1
@@ -152,7 +152,7 @@ controller_server:
       ObstaclesCritic:
         enabled: true
         cost_power: 1
-        repulsion_weight: 1.5
+        repulsion_weight: 1.5   # porportional inflation_radius, ori : 1.5
         critical_weight: 20.0
         consider_footprint: false
         collision_cost: 10000.0
@@ -246,7 +246,7 @@ local_costmap:
       width: 5
       height: 5
       resolution: 0.05
-      footprint: "[ [-0.4, -0.3], [-0.4, 0.3], [0.4, 0.3], [0.4, -0.3] ]"
+      footprint: "[ [-0.41, -0.31], [-0.41, 0.31], [0.41, 0.31], [0.41, -0.31] ]"
       plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -284,7 +284,7 @@ global_costmap:
       publish_frequency: 5.0
       global_frame: map
       robot_base_frame: base_link
-      footprint: "[ [-0.4, -0.3], [-0.4, 0.3], [0.4, 0.3], [0.4, -0.3] ]"
+      footprint: "[ [-0.41, -0.31], [-0.41, 0.31], [0.41, 0.31], [0.41, -0.31] ]"
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -400,12 +400,12 @@ velocity_smoother:
     scale_velocities: False
     feedback: "CLOSED_LOOP"   # CLOSED_LOOP reference is odom, OPEN_LOOP reference is /cmd_vel
     max_velocity: [0.5, 0.0, 3.0]     # x, y, z
-    min_velocity: [-0.2, 0.0, -3.0]   # x, y, z
+    min_velocity: [-0.3, 0.0, -3.0]   # x, y, z
     max_accel: [2.5, 0.0, 5.0]
     max_decel: [-2.5, 0.0, -5.0]
     odom_topic: "odom"
     odom_duration: 0.1
-    deadband_velocity: [0.01, 0.0, 0.01]  # avoid jitter. x, y, z
+    deadband_velocity: [0.03, 0.0, 0.05]  # avoid jitter. x, y, z
     velocity_timeout: 0.8
 
 collision_monitor:
